RESOLVED FIXED293098
AutoFill unexpectedly scrolls to reveal text fields when inserting text
https://bugs.webkit.org/show_bug.cgi?id=293098
Summary AutoFill unexpectedly scrolls to reveal text fields when inserting text
Wenson Hsieh
Reported 2025-05-15 20:28:11 PDT
Attachments
Wenson Hsieh
Comment 1 2025-05-15 20:38:00 PDT
EWS
Comment 2 2025-05-16 09:17:31 PDT
Committed 295008@main (76c14537ee04): <https://commits.webkit.org/295008@main> Reviewed commits have been landed. Closing PR #45476 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.