AutoFill unexpectedly scrolls to reveal text fields when inserting text https://bugs.webkit.org/show_bug.cgi?id=293098 rdar://149708409

Reviewed by Aditya Keerthi and Abrar Rahman Protyasha.

When performing AutoFill, Safari's injected script creates and dispatches `TextEvent`s in each text
field to simulate text input, in such a way that the resulting DOM events dispatched to the page
closely match those dispatched when typing manually.

While generally good for AutoFill compatibility, this results in some unwanted behaviors, such as
the scroll position potentially flickering if some of the form fields lie offscreen, due to the fact
that we'll attempt to reveal the selection when dispatching `TextEvent`.

We already avoid scrolling to reveal the selection when using `document.execCommand(…)` to insert
text, so we can fix this bug by applying a similar treatment to the case where `TextEvent` DOM
events are untrusted (created using `Document.createEvent` / `Event.initTextEvent`).

* LayoutTests/editing/inserting/no-scroll-after-text-event-created-from-bindings-expected.txt: Added.
* LayoutTests/editing/inserting/no-scroll-after-text-event-created-from-bindings.html: Added.

Add a test that inserts text by creating and dispatching a `TextEvent` in a focused field.

* Source/WebCore/editing/Editor.cpp:
(WebCore::Editor::insertTextWithoutSendingTextEvent):

Canonical link: https://commits.webkit.org/295008@main